--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="#">The School</a>
 
                 <ul class="sub-menu">
-                  <li><a href="http://flatironschool.com/events">Events</a></li>
+                  <li><a href="http://flatironschool.com/events">Event</a></li>
                   <li><a href="http://flatironschool.com/contact">Contact</a></li>
                   <li><a href="http://students.flatironschool.com/">Students</a></li>
                 </ul>
