--- a/students/student_aj.html
+++ b/students/student_aj.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href="../css/style.css" type='text/css' media='all' />
   <style>
     .top-page-title {
-      background: url(../img/students/student_name_background.jpg) no-repeat top center;
+      background: url(../img/students/Aj_cover_photo.jpg) no-repeat top center;
     }
   </style>
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
@@ -94,7 +94,7 @@
       <!-- Begin Splash Image -->
       <div class="top-page-title">
         <div>
-          <img src="../img/students/student_name_profile.jpg" class="student_pic">
+          <img src="../img/students/Aj_profile_pic.jpg" class="student_pic">
         </div>
       </div>
       <! -- End Splash Image -->
@@ -104,8 +104,8 @@
         <h4 class="ib_main_header">Student Name</h4>
         <div class="social-icons">
           <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
-          <a href="http://www.linkedin.com/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
-          <a href="https://github.com/"><i class="icon-github ib-social-icons"></i></a>
+          <a href="http://www.linkedin.com/ajani-queeley-636043101" target = '_blank'><i class="icon-linkedin-sign ib-social-icons"></i></a>
+          <a href="https://github.com/ajvni" target='_blank'><i class="icon-github ib-social-icons"></i></a>
           <a href="#"><i class="icon-rss ib-social-icons"></i></a>
         </div>
 
@@ -114,7 +114,7 @@
             <ul class="testimonials slides">
               <li id="text-7" class="widget_text" style="list-style: none; display: list-item;">
                 <div class="textwidget">
-                  <h3>"Quote It was the best of times it was meh." -- someone smart said this.</h3>
+                  <h3>"NOT TODAY SATAN" -- someone smart said this.</h3>
                 </div>
               </li>
             </ul>
@@ -138,7 +138,7 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut. 
+                  I'm Ajani Queeley. I'm just a 23 year old nerd from the Bronx, but you can just call me "AJ". I'm a diehard New York Mets fan and an anime enthusiast.
                 </p>
               </div>
             </div>
@@ -148,8 +148,8 @@
                 <div class="services-title"><h3>Education</h3></div>
                 <div class="clear"></div>
                 <ul>
-                  <li>University</li>
-                  <li>Other School</li>
+                  <li>Providence College (2014-2017)</li> 
+                  
                 </ul>
               </div>
             </div>
@@ -160,7 +160,7 @@
                 <div class="clear"></div>
                 <h4>Some Company</h4>
                 <p>
-                  Blurb about company...
+                  I was a fancy IT Intern and a Stock Manager
                 </p>
               </div>
             </div>
@@ -206,7 +206,7 @@
               <div class="services-wrap" id="equalize">
                 <div id="ok-text-column-2" class="column ok-text-column" style="height: 204px;">
                   <div class="services">
-                    <div class="services-title">
+                    <!-- <div class="services-title">
                       <h3>Coding Profiles</h3>
                     </div>
                     <div class="clear"></div>
@@ -215,7 +215,7 @@
                       - <a href="http://teamtreehouse.com/">Treehouse</a><br>
                       - <a href="http://www.codecademy.com/">Codecademy</a><br>
                       - <a href="https://coderwall.com/">Coder Wall</a><br>
-                    </p>
+                    </p> -->
                   </div>
                 </div>
 
@@ -226,7 +226,7 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      - <a href="#">Personal Blog</a><br>
+                      - <a href="https://www.ajvni.github.io">My Github</a><br>
                       - <a href="#">Tumblr</a><br>
                     </p>
                   </div>
@@ -234,11 +234,11 @@
 
                 <div id="ok-text-column-4" class="column ok-text-column" style="height: 204px;">
                   <div class="services">
-                    <div class="services-title">
+                    <!-- <div class="services-title">
                       <h3>Personal Projects</h3>
                     </div>
                     <div class="clear"></div>
-                    <p>Coming Soon..</p>
+                    <p>Coming Soon..</p> -->
                   </div>
                 </div>
             </div>
