--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                       <a href="students/student_name.html">Alex </a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">He is a great help</p>
                 </div>
                 <div class="clear"></div>
 
